<resources>

    /*--------------------------------------------------------------------*/
    /*----------------------MainActivity Layout Value---------------------*/
    /*--------------------------------------------------------------------*/
    <string name="app_name">Water Supply</string>
    <string name="connect_arduino_floating_button">Connect Arduino</string>
    <string name="image_view_hint">Background</string>
    /*--------------------------------------------------------------------*/
    /*--------------------------------------------------------------------*/


    /*------------------------------------------------------*/
    /*------------------ToolBar Menu Items------------------*/
    /*------------------------------------------------------*/
    <string name="submenu">Menu</string>
    <string name="settings">Settings</string>
    <string name="last_log">Last Log</string>
    <string name="app_info">Info</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">settings</string>
    /*------------------------------------------------------*/
    /*------------------------------------------------------*/


    /*-------------------------------------------------------*/
    /*-----------------Settings Layout Value-----------------*/
    /*-------------------------------------------------------*/
    <string name="dark_mode_switch">Dark Mode</string>
    <string name="timer_switch">Enable Timer</string>
    <string name="time_set">Time Set</string>
    <string name="disable_timer">Disable Timer</string>
    /*-------------------------------------------------------*/
    /*-------------------------------------------------------*/

</resources>